# rs-automata

./: Cargo.toml  README.md
.github/workflows/: cargo-check.yml
src/: cell_event.rs  cell_renderer.rs  color_method.rs  main.rs  neighbors.rs  rotating_camera.rs  rule.rs  utils.rs
src/cells/: mod.rs  sims.rs
src/cells/tantan/: mod.rs  single_threaded.rs
