[package]
name = "rs-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_egui = "0.15.0"
bevy_flycam = "*"
bytemuck = "*"
futures-lite = "1.12.0"
num_cpus = "1.13.1"
rand = "*"
